FreeST/test/Programs/ValidTests/intListSimpleWithLet/intListSimpleWithLet.fst

main : [Int]
main = let x = 1 in [x,x,x,x,5,x,x,x,x]