FreeST/test/Programs/InvalidTests/Typing/multiVarTypeSigNoBind/multiVarTypeSigNoBind.fst
x, y, z : Int 
x = 1
y = 2

main : Int
main = x + y